scripts for creating cv-like dataset

--- a/code/data_processing/create_cv_like_dataset.ipynb
+++ b/code/data_processing/create_cv_like_dataset.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "folder_path = \"../data\"\n",
-    "output_path = \"../preprocessed_data\"\n",
+    "folder_path = \"../../data/6_11_2025_tcc\"\n",
+    "output_path = \"../../data/6_11_2025_tcc_cv\"\n",
     "\n",
     "textgrid_files = [file for file in os.listdir(folder_path) if file.endswith('.TextGrid')]\n",
     "mp3_files = [file for file in os.listdir(folder_path) if file.endswith('.mp3')]\n",
