--- a/code/data_processing/EDA/brackets_investigation.ipynb
+++ b/code/data_processing/EDA/brackets_investigation.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checks which files containes annotations with some additional texts in brackets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
