--- a/code/data_processing/EDA/directories_subsets_split.ipynb
+++ b/code/data_processing/EDA/directories_subsets_split.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Devides directories in the CV like dataset into train/test/validation subsets accordingly to total duration of annotated clips. Saves the subsets as list of directories, separate file for each subset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
