--- a/code/data_processing/EDA/file_types.ipynb
+++ b/code/data_processing/EDA/file_types.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AS the Asmjeeg dataset was probably created by many people, the metodology used for transcribing files differes. This notebook expolores which files would be the best to use for fine-tuning, to keep the data possibly consistent."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
