--- a/code/data_processing/EDA/sw-common-voice-eda.ipynb
+++ b/code/data_processing/EDA/sw-common-voice-eda.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random EDA of the Swahili Common Voice dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
