small changes to improve training, additional metrices

--- a/code/whisper-sw-finetuning.ipynb
+++ b/code/whisper-sw-finetuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,18 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/zuzamakowska/Documents/Africa/Project/Low-resource-languages/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets.utils.logging import set_verbosity_info\n",
     "set_verbosity_info()"
@@ -76,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +182,7 @@
      "output_type": "stream",
      "text": [
       "{'client_id': Value('string'), 'path': Audio(sampling_rate=16000, decode=True, num_channels=None, stream_index=None), 'sentence_id': Value('string'), 'sentence': Value('string'), 'sentence_domain': Value('string'), 'up_votes': Value('string'), 'down_votes': Value('string'), 'age': Value('string'), 'gender': Value('string'), 'accents': Value('string'), 'variant': Value('string'), 'locale': Value('string'), 'segment': Value('string')}\n",
-      "{'client_id': 'f0e3f1cbc3526ea2273da567cb59583344ad1606b7be2ad13a902e8b971af62a3da34c20d4ee0e9ee59812079b0400ef7d2091514e02e74fa44c27a2c9ca5862', 'path': <datasets.features._torchcodec.AudioDecoder object at 0x149d1f280>, 'sentence_id': '5071bd0e179a4bb6d66e567969bcedb020858ddde6ed0eda07174e909497afe0', 'sentence': 'deLima alifunga mabao mawili kwenye fainali ya kombe la dunia', 'sentence_domain': None, 'up_votes': '2', 'down_votes': '0', 'age': 'thirties', 'gender': 'female_feminine', 'accents': None, 'variant': None, 'locale': 'sw', 'segment': None}\n"
+      "{'client_id': 'f0e3f1cbc3526ea2273da567cb59583344ad1606b7be2ad13a902e8b971af62a3da34c20d4ee0e9ee59812079b0400ef7d2091514e02e74fa44c27a2c9ca5862', 'path': <datasets.features._torchcodec.AudioDecoder object at 0x164f53790>, 'sentence_id': '5071bd0e179a4bb6d66e567969bcedb020858ddde6ed0eda07174e909497afe0', 'sentence': 'deLima alifunga mabao mawili kwenye fainali ya kombe la dunia', 'sentence_domain': None, 'up_votes': '2', 'down_votes': '0', 'age': 'thirties', 'gender': 'female_feminine', 'accents': None, 'variant': None, 'locale': 'sw', 'segment': None}\n"
      ]
     }
    ],
@@ -203,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +225,7 @@
        "})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -264,14 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'path': <datasets.features._torchcodec.AudioDecoder object at 0x13c9ed600>, 'sentence': 'deLima alifunga mabao mawili kwenye fainali ya kombe la dunia', 'variant': None}\n"
+      "{'path': <datasets.features._torchcodec.AudioDecoder object at 0x165848730>, 'sentence': 'deLima alifunga mabao mawili kwenye fainali ya kombe la dunia', 'variant': None}\n"
      ]
     }
    ],
@@ -281,36 +272,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-7.3472851e-12 -4.9304753e-12  1.4526930e-12  1.2472109e-11\n",
-      "  1.9373041e-11  3.6777239e-12 -7.8702288e-12 -2.6043463e-11\n",
-      " -9.5683704e-13  4.1811121e-11]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ds = ds.with_format(\"numpy\")\n",
     "ds = ds.rename_column(\"path\", \"audio\")\n",
-    "sample = ds[\"train\"][0]\n",
-    "print(sample[\"audio\"][\"array\"][:10])"
+    "sample = ds[\"train\"][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'audio': <datasets.features._torchcodec.AudioDecoder object at 0x17789fc10>, 'sentence': np.str_('deLima alifunga mabao mawili kwenye fainali ya kombe la dunia'), 'variant': None}\n"
+      "<datasets.features._torchcodec.AudioDecoder object at 0x165856290>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sample[\"audio\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'audio': <datasets.features._torchcodec.AudioDecoder object at 0x1658499f0>, 'sentence': np.str_('deLima alifunga mabao mawili kwenye fainali ya kombe la dunia'), 'variant': None}\n"
      ]
     }
    ],
@@ -327,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +363,7 @@
        "np.str_('deLima alifunga mabao mawili kwenye fainali ya kombe la dunia')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +414,7 @@
        " 50257]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +435,7 @@
        "'<|startoftranscript|><|sw|><|transcribe|><|notimestamps|>deLima alifunga mabao mawili kwenye fainali ya kombe la dunia<|endoftext|>'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +456,7 @@
        "'deLima alifunga mabao mawili kwenye fainali ya kombe la dunia'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +477,7 @@
        "{'input_ids': [50258, 50318, 50359, 50363, 1479, 43, 4775, 419, 351, 1063, 64, 275, 5509, 78, 463, 86, 2312, 350, 15615, 1200, 283, 491, 5103, 2478, 5207, 650, 635, 10234, 654, 50257], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -536,14 +533,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'audio': <datasets.features._torchcodec.AudioDecoder object at 0x17aec7880>, 'sentence': np.str_('deLima alifunga mabao mawili kwenye fainali ya kombe la dunia'), 'variant': None}\n"
+      "{'audio': <datasets.features._torchcodec.AudioDecoder object at 0x1732ba860>, 'sentence': np.str_('deLima alifunga mabao mawili kwenye fainali ya kombe la dunia'), 'variant': None}\n"
      ]
     }
    ],
@@ -553,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,14 +561,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'audio': <datasets.features._torchcodec.AudioDecoder object at 0x178f504f0>, 'sentence': np.str_('deLima alifunga mabao mawili kwenye fainali ya kombe la dunia'), 'variant': None}\n"
+      "{'audio': <datasets.features._torchcodec.AudioDecoder object at 0x165860340>, 'sentence': np.str_('deLima alifunga mabao mawili kwenye fainali ya kombe la dunia'), 'variant': None}\n"
      ]
     }
    ],
@@ -581,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -649,18 +646,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import WhisperForConditionalGeneration\n",
-    "\n",
-    "model = WhisperForConditionalGeneration.from_pretrained('openai/whisper-small')"
+    "model = WhisperForConditionalGeneration.from_pretrained('openai/whisper-small')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,18 +720,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading builder script: 6.61kB [00:00, 5.91MB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import evaluate\n",
     "\n",
-    "metric = evaluate.load(\"wer\")"
+    "wer_metric = evaluate.load(\"wer\")\n",
+    "cer_metric = evaluate.load(\"cer\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,25 +755,21 @@
     "    pred_str = tokenizer.batch_decode(pred_ids, skip_special_tokens=True)\n",
     "    label_str = tokenizer.batch_decode(label_ids, skip_special_tokens=True)\n",
     "\n",
-    "    wer = 100 * metric.compute(predictions=pred_str, references=label_str)\n",
+    "    wer = 100 * wer_metric.compute(predictions=pred_str, references=label_str)\n",
+    "    cer = 100 * cer_metric.compute(predictions=pred_str, references=label_str)\n",
     "\n",
-    "    return {\"wer\": wer}"
+    "    return {\n",
+    "        \"wer\": wer,\n",
+    "        \"cer\": cer,\n",
+    "        \"combined\": 0.5 * wer + 0.5 * cer,\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/zuzamakowska/Documents/Africa/Project/Low-resource-languages/venv/lib/python3.10/site-packages/transformers/training_args.py:1474: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import Seq2SeqTrainingArguments\n",
     "\n",
@@ -780,7 +781,7 @@
     "    warmup_steps=500,\n",
     "    max_steps=5000,\n",
     "    gradient_checkpointing=True,\n",
-    "    fp16=True,\n",
+    "    fp16=False,\n",
     "    evaluation_strategy=\"steps\",\n",
     "    per_device_eval_batch_size=8,\n",
     "    predict_with_generate=True,\n",
@@ -790,15 +791,16 @@
     "    logging_steps=25,\n",
     "    report_to=[\"tensorboard\"],\n",
     "    load_best_model_at_end=True,\n",
-    "    metric_for_best_model=\"wer\",\n",
+    "    metric_for_best_model=\"combined\",\n",
     "    greater_is_better=False,\n",
     "    push_to_hub=False,\n",
+    "    logging_strategy=\"steps\",\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -832,76 +834,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "  0%|          | 0/5000 [00:00<?, ?it/s]/Users/zuzamakowska/Documents/Africa/Project/Low-resource-languages/venv/lib/python3.10/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
       "/Users/zuzamakowska/Documents/Africa/Project/Low-resource-languages/venv/lib/python3.10/site-packages/torch/_dynamo/eval_frame.py:1044: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. Starting in PyTorch 2.9, calling checkpoint without use_reentrant will raise an exception. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
       "  return fn(*args, **kwargs)\n",
-      "`use_cache = True` is incompatible with gradient checkpointing. Setting `use_cache = False`...\n"
+      "`use_cache = True` is incompatible with gradient checkpointing. Setting `use_cache = False`...\n",
+      "  0%|          | 1/5000 [04:11<348:55:57, 251.28s/it]"
      ]
     }
    ],
    "source": [
-    "trainer.train(log_level=\"info\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds = ds.remove_columns(['client_id', 'sentence_id', 'sentence_domain', 'up_votes', 'down_votes', 'age', 'gender', 'accents', 'locale', 'segment'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DatasetDict({\n",
-      "    train: Dataset({\n",
-      "        features: ['audio', 'sentence', 'variant'],\n",
-      "        num_rows: 46611\n",
-      "    })\n",
-      "    validation: Dataset({\n",
-      "        features: ['audio', 'sentence', 'variant'],\n",
-      "        num_rows: 11692\n",
-      "    })\n",
-      "    test: Dataset({\n",
-      "        features: ['audio', 'sentence', 'variant'],\n",
-      "        num_rows: 11944\n",
-      "    })\n",
-      "})\n",
-      "46611\n",
-      "11692\n",
-      "11944\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(ds)\n",
-    "print(ds[\"train\"].num_rows)\n",
-    "print(ds[\"validation\"].num_rows)\n",
-    "print(ds[\"test\"].num_rows)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'audio': <datasets.features._torchcodec.AudioDecoder object at 0xfb7a58d90>, 'sentence': np.str_('deLima alifunga mabao mawili kwenye fainali ya kombe la dunia'), 'variant': None}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(ds[\"train\"][0])"
+    "trainer.train()"
    ]
   },
   {
